# PaddleOCR-TVM

./: .gitmodules
docs/: BENCHMARK_PLAN.md  IMPL_PLAN_v1.md  PROJECT_CONTEXT.md
python/: .gitignore  README.md  pyproject.toml
python/src/paddleocr_tvm/: __init__.py  __main__.py  artifacts.py  backend_specs.py  backends.py  benchmark.py  cli.py  constants.py  conversion.py  errors.py  geometry.py  parity.py  pipeline.py  postprocess.py  preprocess.py  tvm_bootstrap.py  types.py
python/tests/: test_artifacts.py  test_backend_specs.py  test_benchmark_outputs.py  test_cli.py  test_conversion.py  test_geometry.py  test_parity_outputs.py  test_postprocess.py  test_preprocess.py  test_recognizer_dict.py  test_tvm_bootstrap.py
scripts/: build_tvm.sh
