[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27"]

[project]
authors = [{ name = "Yunho Cho", email = "ycho358@gatech.edu" }]
dependencies = []
description = "Python package and Pixi workspace for PaddleOCR-TVM."
name = "paddleocr-tvm"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
paddleocr-tvm = "paddleocr_tvm.cli:main"

[project.urls]
Repository = "https://github.com/yunho-c/PaddleOCR-TVM"

[dependency-groups]
dev = [
  "mypy>=1.18,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=7,<8",
  "ruff>=0.13,<0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paddleocr_tvm"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
"paddleocr-tvm" = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
start = "python -m paddleocr_tvm"

[tool.pixi.feature.dev.tasks]
check = { depends-on = ["lint", "typecheck", "test"] }
format = "ruff format ."
lint = "ruff check ."
test = "pytest"
test-cov = "pytest --cov=paddleocr_tvm --cov-report=term-missing"
typecheck = "mypy src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
packages = ["paddleocr_tvm"]
python_version = "3.11"
strict = true
